# ESP32RemoteControl

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  协议说明.md
components/core/: CMakeLists.txt  README.md  comm.c  comm.h  core.c  core.h  dataFrame.h  data_poll.c  data_poll.h  hardware.h
components/lvgl/: lv_conf.h
components/lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
components/lvgl/src/misc/: lv_assert.h  lv_log.c
components/pages/: CMakeLists.txt  lwpage.c  lwpage.h  mainpage.c  mainpage.h  page_manager.c  page_manager.h  ui_page.lf
components/screen/: CMakeLists.txt  FT6336.c  FT6336.h  ILI9341.c  ILI9341.h  lvgl_port_disp.c  lvgl_port_disp.h
main/: CMakeLists.txt  main.c
stm32_port/: README.md  comm_stm32_hal_middle.c  comm_stm32_hal_middle.h  example_usage.c
